updated home page again

--- a/etp/src/app/modules/auth/complete-registeration/complete-registeration.component.html
+++ b/etp/src/app/modules/auth/complete-registeration/complete-registeration.component.html
@@ -104,7 +104,7 @@
         <button
           mat-raised-button
           type="button"
-          class="btn btn-block mt-3 transition-3d-hover"
+          class="btn btn-block btn-primary mt-3 transition-3d-hover"
           type="submit"
           (click)="submit()"
           i18n
