--- a/etp/src/app/modules/dashboard/analytics/analytics.component.html
+++ b/etp/src/app/modules/dashboard/analytics/analytics.component.html
@@ -166,7 +166,7 @@
                   [chart]="chart.roomOptions.chart"
                   [plotOptions]="chart.iotOptions.plotOptions"
                   [stroke]="chart.roomOptions.stroke"
-                  [fill]="{ type: 'solid', color: '#b99745' }"
+                  [fill]="{ type: 'solid', color: '#1f8efa' }"
                 ></apx-chart>
                 <i class="fas fa-{{ item.icon }} device-icon"></i>
               </div>
