--- a/etp/src/app/modules/dashboard/overview/overview.component.html
+++ b/etp/src/app/modules/dashboard/overview/overview.component.html
@@ -16,7 +16,15 @@
                 </div>
                 <div class="right">
                   <div class="d-block grey" i18n>Total</div>
-                  <p class="earn">3,500 <span>TL</span></p>
+                  <p class="earn">
+                    3,500
+                    <span
+                      ><img
+                        src="assets/svg/tl.svg"
+                        alt="TL"
+                        style="width: 18px; vertical-align: baseline;"
+                    /></span>
+                  </p>
                 </div>
               </div>
             </div>
@@ -132,7 +140,7 @@
                   [xaxis]="chart.barOptions.xaxis"
                   [grid]="chart.weatherForecastOptions.grid"
                   [yaxis]="chart.barOptions.yaxis"
-                  [colors]="['#b99745']"
+                  [colors]="['#1f8efa']"
                 ></apx-chart>
               </div>
             </div>
