--- a/etp/src/app/modules/home/about/about.component.html
+++ b/etp/src/app/modules/home/about/about.component.html
@@ -2,12 +2,12 @@
 <div class="bg-light">
   <div class="container space-2 space-lg-3">
     <!-- Title -->
-    <div class="w-md-80 w-lg-50 text-center mx-md-auto mb-9">
+    <div class="w-md-80 w-lg-50 text-center mx-md-auto mb-9 mt-9">
       <span
         data-aos="fade-up"
         class="d-block text-primary font-size-1 font-weight-medium text-uppercase mb-2"
         i18n
-        >WELCOME</span
+        >ABOUT US</span
       >
       <h2
         class="font-weight-medium"
