--- a/etp/src/assets/scss/theme.scss
+++ b/etp/src/assets/scss/theme.scss
@@ -6,7 +6,7 @@
 
 // Bootstrap core
 $enable-grid-classes: false;
-$primary: #b99745;
+$primary: #1f8efa;
 $secondary: #657d95;
 $success: #05c985;
 $danger: #ee423d;
